Basic working version of hidden indices